[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Tianhui Michael Li <tianhuil@cs.princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^0.29.1"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
